--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,8 @@
+---
+
 name: CI
 
-on:
+'on':
   push:
     branches: [main]
   pull_request:
@@ -16,74 +18,81 @@ jobs:
         zig-version: ['0.15.1']
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Setup Zig
-      uses: goto-bus-stop/setup-zig@v2
-      with:
-        version: ${{ matrix.zig-version }}
+      - name: Setup Zig
+        uses: goto-bus-stop/setup-zig@v2
+        with:
+          version: ${{ matrix.zig-version }}
 
-    - name: Verify Zig installation
-      run: zig version
+      - name: Verify Zig installation
+        run: zig version
 
-    - name: Check code formatting
-      run: zig fmt --check src/
+      - name: Check code formatting
+        run: zig fmt --check src/
 
-    - name: Build library
-      run: zig build
+      - name: Build library
+        run: zig build
 
-    - name: Run tests
-      run: zig test src/base62.zig
+      - name: Run tests
+        run: zig test src/base62.zig
 
-    - name: Run comprehensive test suite
-      run: zig build test
+      - name: Run comprehensive test suite
+        run: zig build test
 
-    - name: Run coverage analysis
-      run: |
-        echo "📊 Running coverage analysis with Zig-native tools..."
-        zig build test-coverage
+      - name: Run coverage analysis
+        run: |
+          echo "📊 Running coverage analysis with Zig-native tools..."
+          zig build test-coverage
 
-    - name: Generate coverage summary
-      run: |
-        echo "## 📊 Test Coverage Report" > coverage-summary.md
-        echo "" >> coverage-summary.md
-        echo "### ✅ Coverage Metrics" >> coverage-summary.md
-        echo "" >> coverage-summary.md
-        echo "- **Function Coverage**: 100% (14/14 functions)" >> coverage-summary.md
-        echo "- **Test Cases**: 12 comprehensive tests" >> coverage-summary.md
-        echo "- **Error Coverage**: 100% (all error paths tested)" >> coverage-summary.md
-        echo "- **Edge Cases**: ~98% coverage" >> coverage-summary.md
-        echo "" >> coverage-summary.md
-        echo "### 🧪 Test Results" >> coverage-summary.md
-        echo "" >> coverage-summary.md
-        echo "All tests passed successfully with comprehensive coverage of:" >> coverage-summary.md
-        echo "- Integer encoding/decoding" >> coverage-summary.md
-        echo "- Byte array processing" >> coverage-summary.md
-        echo "- Custom alphabet validation" >> coverage-summary.md
-        echo "- Error handling and edge cases" >> coverage-summary.md
-        echo "- Overflow detection" >> coverage-summary.md
+      - name: Generate coverage summary
+        run: |
+          echo "## 📊 Test Coverage Report" > coverage-summary.md
+          echo "" >> coverage-summary.md
+          echo "### ✅ Coverage Metrics" >> coverage-summary.md
+          echo "" >> coverage-summary.md
+          echo "- **Function Coverage**: 100% (14/14 functions)" \
+            >> coverage-summary.md
+          echo "- **Test Cases**: 12 comprehensive tests" >> coverage-summary.md
+          echo "- **Error Coverage**: 100% (all error paths tested)" \
+            >> coverage-summary.md
+          echo "- **Edge Cases**: ~98% coverage" >> coverage-summary.md
+          echo "" >> coverage-summary.md
+          echo "### 🧪 Test Results" >> coverage-summary.md
+          echo "" >> coverage-summary.md
+          echo "All tests passed successfully with comprehensive" \
+            "coverage of:" >> coverage-summary.md
+          echo "- Integer encoding/decoding" >> coverage-summary.md
+          echo "- Byte array processing" >> coverage-summary.md
+          echo "- Custom alphabet validation" >> coverage-summary.md
+          echo "- Error handling and edge cases" >> coverage-summary.md
+          echo "- Overflow detection" >> coverage-summary.md
 
-    - name: Upload coverage summary
-      uses: actions/upload-artifact@v4
-      with:
-        name: coverage-summary-zig-${{ matrix.zig-version }}
-        path: coverage-summary.md
-        retention-days: 30
+      - name: Upload coverage summary
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-summary-zig-${{ matrix.zig-version }}
+          path: coverage-summary.md
+          retention-days: 30
 
-    - name: Display coverage summary
-      run: |
-        echo "## 📊 Coverage Summary" >> $GITHUB_STEP_SUMMARY
-        echo "### Test Results for Zig ${{ matrix.zig-version }}" >> $GITHUB_STEP_SUMMARY
-        echo "" >> $GITHUB_STEP_SUMMARY
-        echo "✅ **All tests passed successfully**" >> $GITHUB_STEP_SUMMARY
-        echo "" >> $GITHUB_STEP_SUMMARY
-        echo "- **Function Coverage**: 100% (14/14 functions)" >> $GITHUB_STEP_SUMMARY
-        echo "- **Test Cases**: 12 comprehensive tests" >> $GITHUB_STEP_SUMMARY
-        echo "- **Error Coverage**: 100% (all paths tested)" >> $GITHUB_STEP_SUMMARY
-        echo "- **Edge Cases**: ~98% coverage" >> $GITHUB_STEP_SUMMARY
-        echo "" >> $GITHUB_STEP_SUMMARY
-        echo "📄 [View detailed coverage report in artifacts](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})" >> $GITHUB_STEP_SUMMARY
+      - name: Display coverage summary
+        run: |
+          echo "## 📊 Coverage Summary" >> $GITHUB_STEP_SUMMARY
+          echo "### Test Results for Zig ${{ matrix.zig-version }}" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "✅ **All tests passed successfully**" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "- **Function Coverage**: 100% (14/14 functions)" \
+            >> $GITHUB_STEP_SUMMARY
+          echo "- **Test Cases**: 12 comprehensive tests" >> $GITHUB_STEP_SUMMARY
+          echo "- **Error Coverage**: 100% (all paths tested)" \
+            >> $GITHUB_STEP_SUMMARY
+          echo "- **Edge Cases**: ~98% coverage" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "📄 [View detailed coverage report in artifacts]" \
+            "(${{ github.server_url }}/${{ github.repository }}/" \
+            "actions/runs/${{ github.run_id }})" >> $GITHUB_STEP_SUMMARY
 
   cross-platform:
     name: Cross-platform Build Test
@@ -95,83 +104,84 @@ jobs:
         zig-version: ['0.15.1']
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Setup Zig
-      uses: goto-bus-stop/setup-zig@v2
-      with:
-        version: ${{ matrix.zig-version }}
+      - name: Setup Zig
+        uses: goto-bus-stop/setup-zig@v2
+        with:
+          version: ${{ matrix.zig-version }}
 
-    - name: Run tests (Unix)
-      if: runner.os != 'Windows'
-      run: |
-        zig test src/base62.zig
-        zig build test
+      - name: Run tests (Unix)
+        if: runner.os != 'Windows'
+        run: |
+          zig test src/base62.zig
+          zig build test
 
-    - name: Run tests (Windows)
-      if: runner.os == 'Windows'
-      run: |
-        zig test src/base62.zig
-        zig build test
+      - name: Run tests (Windows)
+        if: runner.os == 'Windows'
+        run: |
+          zig test src/base62.zig
+          zig build test
 
-    - name: Test simple coverage (no external tools)
-      run: zig build test-coverage
+      - name: Test simple coverage (no external tools)
+        run: zig build test-coverage
 
   security:
     name: Security and Quality Checks
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Setup Zig
-      uses: goto-bus-stop/setup-zig@v2
-      with:
-        version: '0.15.1'
+      - name: Setup Zig
+        uses: goto-bus-stop/setup-zig@v2
+        with:
+          version: '0.15.1'
 
-    - name: Check for sensitive information
-      run: |
-        echo "🔍 Scanning for potential secrets..."
+      - name: Check for sensitive information
+        run: |
+          echo "🔍 Scanning for potential secrets..."
 
-        # Check for common secret patterns
-        if grep -r -E "(password|secret|key|token)" --include="*.zig" src/; then
-          echo "⚠️ Potential secrets found in source code"
-          exit 1
-        else
-          echo "✅ No obvious secrets detected in source code"
-        fi
-
-    - name: Validate project structure
-      run: |
-        echo "📁 Validating project structure..."
-
-        # Check required files exist
-        required_files=("README.md" "build.zig" "src/base62.zig" ".gitignore")
-        for file in "${required_files[@]}"; do
-          if [[ ! -f "$file" ]]; then
-            echo "❌ Required file missing: $file"
+          # Check for common secret patterns
+          if grep -r -E "(password|secret|key|token)" \
+            --include="*.zig" src/; then
+            echo "⚠️ Potential secrets found in source code"
             exit 1
+          else
+            echo "✅ No obvious secrets detected in source code"
           fi
-        done
 
-        echo "✅ All required files present"
+      - name: Validate project structure
+        run: |
+          echo "📁 Validating project structure..."
 
-    - name: Check documentation completeness
-      run: |
-        echo "📚 Checking documentation..."
+          # Check required files exist
+          required_files=("README.md" "build.zig" "src/base62.zig" ".gitignore")
+          for file in "${required_files[@]}"; do
+            if [[ ! -f "$file" ]]; then
+              echo "❌ Required file missing: $file"
+              exit 1
+            fi
+          done
 
-        # Verify all functions are documented in README
-        functions=("encodeInt" "decodeInt" "encodeBytes" "decodeBytes")
-        for func in "${functions[@]}"; do
-          if ! grep -q "$func" README.md; then
-            echo "⚠️ Function $func not documented in README.md"
-            exit 1
-          fi
-        done
+          echo "✅ All required files present"
 
-        echo "✅ Documentation appears complete"
+      - name: Check documentation completeness
+        run: |
+          echo "📚 Checking documentation..."
+
+          # Verify all functions are documented in README
+          functions=("encodeInt" "decodeInt" "encodeBytes" "decodeBytes")
+          for func in "${functions[@]}"; do
+            if ! grep -q "$func" README.md; then
+              echo "⚠️ Function $func not documented in README.md"
+              exit 1
+            fi
+          done
+
+          echo "✅ Documentation appears complete"
 
   release-readiness:
     name: Release Readiness Check
@@ -180,62 +190,74 @@ jobs:
     if: github.ref == 'refs/heads/main'
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Setup Zig
-      uses: goto-bus-stop/setup-zig@v2
-      with:
-        version: '0.15.1'
+      - name: Setup Zig
+        uses: goto-bus-stop/setup-zig@v2
+        with:
+          version: '0.15.1'
 
-    - name: Verify all tests pass
-      run: |
-        echo "🧪 Final test verification..."
-        zig test src/base62.zig
-        zig build test
+      - name: Verify all tests pass
+        run: |
+          echo "🧪 Final test verification..."
+          zig test src/base62.zig
+          zig build test
 
-        # Get test count
-        test_count=$(zig test src/base62.zig 2>&1 | grep -o '[0-9]\+/[0-9]\+ .*OK' | wc -l)
-        echo "✅ $test_count tests passed"
+          # Get test count
+          test_count=$(zig test src/base62.zig 2>&1 | \
+            grep -o '[0-9]\+/[0-9]\+ .*OK' | wc -l)
+          echo "✅ $test_count tests passed"
 
-    - name: Generate final coverage report
-      run: |
-        echo "📊 Generating final coverage report..."
-        zig build test-coverage
+      - name: Generate final coverage report
+        run: |
+          echo "📊 Generating final coverage report..."
+          zig build test-coverage
 
-        # Create release summary
-        echo "## 🎯 Release Readiness Report" >> release-summary.md
-        echo "" >> release-summary.md
-        echo "### ✅ Quality Metrics" >> release-summary.md
-        echo "" >> release-summary.md
-        echo "- **Function Coverage**: 100% (14/14)" >> release-summary.md
-        echo "- **Test Cases**: 12 comprehensive tests" >> release-summary.md
-        echo "- **Cross-platform**: ✅ Linux, macOS, Windows" >> release-summary.md
-        echo "- **Zig Compatibility**: 0.15.1+" >> release-summary.md
-        echo "- **Security**: ✅ No secrets or vulnerabilities detected" >> release-summary.md
-        echo "- **Documentation**: ✅ Complete API documentation" >> release-summary.md
-        echo "" >> release-summary.md
-        echo "### 🚀 Ready for Release" >> release-summary.md
-        echo "" >> release-summary.md
-        echo "This build has passed all quality checks and is ready for release." >> release-summary.md
+          # Create release summary
+          echo "## 🎯 Release Readiness Report" >> release-summary.md
+          echo "" >> release-summary.md
+          echo "### ✅ Quality Metrics" >> release-summary.md
+          echo "" >> release-summary.md
+          echo "- **Function Coverage**: 100% (14/14)" >> release-summary.md
+          echo "- **Test Cases**: 12 comprehensive tests" >> release-summary.md
+          echo "- **Cross-platform**: ✅ Linux, macOS, Windows" \
+            >> release-summary.md
+          echo "- **Zig Compatibility**: 0.15.1+" >> release-summary.md
+          echo "- **Security**: ✅ No secrets or vulnerabilities detected" \
+            >> release-summary.md
+          echo "- **Documentation**: ✅ Complete API documentation" \
+            >> release-summary.md
+          echo "" >> release-summary.md
+          echo "### 🚀 Ready for Release" >> release-summary.md
+          echo "" >> release-summary.md
+          echo "This build has passed all quality checks and is ready" \
+            "for release." >> release-summary.md
 
-    - name: Upload release readiness report
-      uses: actions/upload-artifact@v4
-      with:
-        name: release-readiness-report
-        path: release-summary.md
-        retention-days: 90
+      - name: Upload release readiness report
+        uses: actions/upload-artifact@v4
+        with:
+          name: release-readiness-report
+          path: release-summary.md
+          retention-days: 90
 
-    - name: Create release readiness summary
-      run: |
-        echo "## 🎉 Release Readiness: PASSED" >> $GITHUB_STEP_SUMMARY
-        echo "" >> $GITHUB_STEP_SUMMARY
-        echo "All quality checks have passed for this merge to main:" >> $GITHUB_STEP_SUMMARY
-        echo "" >> $GITHUB_STEP_SUMMARY
-        echo "✅ **Tests**: 12/12 comprehensive tests passing" >> $GITHUB_STEP_SUMMARY
-        echo "✅ **Coverage**: 100% function coverage achieved" >> $GITHUB_STEP_SUMMARY
-        echo "✅ **Cross-platform**: Linux, macOS, Windows compatible" >> $GITHUB_STEP_SUMMARY
-        echo "✅ **Security**: No sensitive information detected" >> $GITHUB_STEP_SUMMARY
-        echo "✅ **Documentation**: Complete and up-to-date" >> $GITHUB_STEP_SUMMARY
-        echo "" >> $GITHUB_STEP_SUMMARY
-        echo "🚀 **This build is ready for release!**" >> $GITHUB_STEP_SUMMARY
+      - name: Create release readiness summary
+        run: |
+          echo "## 🎉 Release Readiness: PASSED" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "All quality checks have passed for this merge to main:" \
+            >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "✅ **Tests**: 12/12 comprehensive tests passing" \
+            >> $GITHUB_STEP_SUMMARY
+          echo "✅ **Coverage**: 100% function coverage achieved" \
+            >> $GITHUB_STEP_SUMMARY
+          echo "✅ **Cross-platform**: Linux, macOS, Windows compatible" \
+            >> $GITHUB_STEP_SUMMARY
+          echo "✅ **Security**: No sensitive information detected" \
+            >> $GITHUB_STEP_SUMMARY
+          echo "✅ **Documentation**: Complete and up-to-date" \
+            >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "🚀 **This build is ready for release!**" \
+            >> $GITHUB_STEP_SUMMARY
